--- a/.github/workflows/docfx-pages.yaml
+++ b/.github/workflows/docfx-pages.yaml
@@ -4,22 +4,26 @@ on:
     branches:
       - master
 jobs:
-  Explore-GitHub-Actions:
+  DocFX:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
         uses: actions/checkout@v2
+      - uses: nikeee/docfx-action@v1.0.0
+        name: Check DocFX version
+        with:
+          args: --version
       - uses: nikeee/docfx-action@v1.0.0
         name: Build Documentation
         with:
           args: docfx_project~/docfx.json
       - name: List files in the repository
         run: |
-          ls ${{ github.workspace }}/docfx_project~
+          ls -R ${{ github.workspace }}/docfx_project~/_site
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ${{ github.workspace }}/docfx_project~/_site
+          user_name: 'github-actions[bot]'
+          user_email: 'parmus@gmail.com'
