Add link back to GitHub

--- a/Documentation~/toc.yml
+++ b/Documentation~/toc.yml
@@ -6,3 +6,5 @@
   homepage: ../CHANGELOG.md
 - name: License
   homepage: ../LICENSE.md
+- name: GitHub
+  homepage: https://github.com/Grumpy-Bear-Games/Unity-FMOD-Utilities
