Add support for Level Management package

--- a/Editor/Games.GrumpyBear.FMOD.Utilities.Editor.asmdef
+++ b/Editor/Games.GrumpyBear.FMOD.Utilities.Editor.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:0c752da273b17c547ae705acf0f2adf2",
         "GUID:aab3caaf43456d6449a3e035348ff798",
-        "GUID:995a602722e56f8469a270933eb97950"
+        "GUID:995a602722e56f8469a270933eb97950",
+        "GUID:dfaebc241068b1f48924ef85a19a0a8d"
     ],
     "includePlatforms": [
         "Editor"
@@ -15,6 +16,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "games.grumpybear.levelmanagement",
+            "expression": "0.0.1",
+            "define": "GRUMPYBEAR_LEVELMANAGEMENT"
+        }
+    ],
     "noEngineReferences": false
 }
