--- a/Packages/games.grumpybear.fmod.utilities/Runtime/Games.GrumpyBear.FMOD.Utilities.asmdef
+++ b/Packages/games.grumpybear.fmod.utilities/Runtime/Games.GrumpyBear.FMOD.Utilities.asmdef
@@ -3,7 +3,7 @@
     "rootNamespace": "Games.GrumpyBear.FMOD.Utilities",
     "references": [
         "GUID:0c752da273b17c547ae705acf0f2adf2",
-        "GUID:dfaebc241068b1f48924ef85a19a0a8d"
+        "GUID:9fbfd4d111112414bb259b5aa2cf32f8"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -14,9 +14,9 @@
     "defineConstraints": [],
     "versionDefines": [
         {
-            "name": "games.grumpybear.levelmanagement",
+            "name": "games.grumpybear.core",
             "expression": "0.0.1",
-            "define": "GRUMPYBEAR_LEVELMANAGEMENT"
+            "define": "GRUMPYBEAR_CORE"
         }
     ],
     "noEngineReferences": false
